--- a/templates/obnam_cronjob.sh.j2
+++ b/templates/obnam_cronjob.sh.j2
@@ -3,14 +3,14 @@
 
 set -e
 
-obnam --quiet \
+/usr/bin/obnam --quiet \
     --compress-with=deflate \
     --repository="{{ repository | mandatory }}" \
     {% if encrypt_with %}--encrypt-with="{{ encrypt_with }}" {% endif %} \
     {% if ssh_key %}--ssh-key="{{ ssh_key | expanduser }}"{% endif %} \
     backup {{ backup_src | mandatory | join(' ') }}
 
-obnam --quiet \
+/usr/bin/obnam --quiet \
     --repository="{{ repository | mandatory }}" \
     {% if ssh_key %}--ssh-key="{{ ssh_key | expanduser }}" {% endif %} \
     {% if encrypt_with %}--encrypt-with="{{ encrypt_with }}" {% endif %} \
